# simple-data-catalog-generator

./: .gitignore  README.md  pyproject.toml
src/simple_data_catalog_generator/: analysis_functions.py  create_catalog_page.py  create_concept_page.py  create_data_catalog.py  create_data_quality_table.py  create_dataservice_page.py  create_dataset_page.py  create_distribution_table.py  create_metadata_table.py  create_metric_page.py  create_policy_page.py  create_series_page.py  page_creation_functions.py
tests/: test-data.yaml
